--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,12 @@
     font-family: 'Montserrat', sans-serif;
     -webkit-font-smoothing: antialiased;
 }
-.wrapper source{
+
+.wrapper img{
   width: 100%;
-  margin-top: 0;
+  margin-top: -6%;
   height: auto;
   background-size: cover;
-  text-align: center;
 }
 
 #background{
@@ -27,13 +27,14 @@
 
 }
 
-
 .rodape{
   color: #fff;
   background-color:#151515;
   text-align: center;
+  top:500%;
   bottom: 0;
   height: 100px;
+
 }
 .sociais{
   background-color: rgb(39, 39, 39);
@@ -82,6 +83,7 @@
     margin-left: 17px !important;
     font-size: 27px;
     padding: 24px 15px;
+    font-family: Myriad Pro Cond Semibold  serif;
 }
 .background-preto{
   position: absolute;
@@ -108,11 +110,103 @@
   color: #f6881f;
   margin-bottom: 0;
 }
+
 .menu2{
   background-color: rgba(15, 15, 15, 0.96) !important;
   border-bottom:3px solid #000000 !important;
   height: 90px !important;
+
 }
+
+.home{
+  background: #fff;
+  position:absolute; 
+  width:100%; 
+  height:100%; 
+  float:left; 
+  left:0;
+  
+}
+.quemsomos{
+
+  position:absolute; 
+  width:100%; 
+  height:100%; 
+  float:left; 
+  left:0;
+  top:100%;
+}
+.galeria{
+   position:absolute; 
+    width:100%; 
+    height:100%; 
+    float:left; 
+    left:0;
+    top:200%;
+  }
+.noticias{
+  position:absolute; 
+  width:100%; 
+  height:100%; 
+  float:left; 
+  left:0;
+  top:300%;
+}
+.contato{
+  position:absolute; 
+  width:100%; 
+  height:100%; 
+  float:left; 
+  left:0;
+  top:400%;
+}
+footer{
+   
+  position:absolute; 
+  width:100%; 
+  bottom: 0;
+  float:left; 
+  left:0;
+  top:500%;
+
+}
+.quemsomospag{
+  padding-top: 10%;
+  padding-bottom: 5%;
+}
+
+i.glyphicon-film, i.glyphicon-picture, i.glyphicon-bullhorn{
+  font-size: 42px;  
+  float: right;
+  
+}
+i.glyphicon-map-marker{
+  font-size: 32px;  
+}
+i.glyphicon-earphone{
+  font-size: 32px;  
+
+}
+.telefone{
+  padding-top: 2%;
+}
+.menssagem{
+  padding-top: 4%;
+}
+.glyphicon-envelope{
+  padding-right: 10px;
+
+}
+.iconquemsomos{
+  padding-top:15px;
+}
+.quemconteudo{
+  padding-top: 5%;
+}
+
+
+
+
 @media screen and (max-width: 1200px) {
 
   .navbar-nav{
